# pftr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: utility.cmake
pftr/: CMakeLists.txt
pftr/core/entry/: CMakeLists.txt
pftr/core/entry/src/: application_statics.cpp  application_statics.hpp  base_application.cpp  base_application.hpp  main.cpp
pftr/core/entry/src/factories/: application.cpp
pftr/core/entry/src/interfaces/: application.hpp
pftr/core/entry/src/linux/: linux_application.cpp  linux_application.hpp
pftr/core/entry/src/windows/: windows_application.cpp  windows_application.hpp
pftr/include/pftr/: pftr_def.hpp
pftr/util/: CMakeLists.txt
pftr/util/include/pftr/util/: base_exception.hpp  singleton.hpp  state_machine.hpp
pftr/util/include/pftr/util/interfaces/: exception.hpp
pftr/util/src/: base_exception.cpp
